2009-04-30 Tatuya
* append a condition to ListBox_asStandardHTML to set a CSS class name in a table row using 'Row CSS Method'.

2009-04-18 Kazuhiko
* Version 5.4.1

2009-03-31 Kazuhiko
* update MochiKit.js to 1.4.2.

2009-03-24 fabien
* split ListBox_asHTML page template. Now there is 3 PT : ListBox_asSearchStyleHTML, ListBox_asTableStyleHTML and ListBox_asStandardHTML
* add css selectors to handle listbox search and table style
* change the method called in the top right search box
* move some form and scripts from erp5_web and erp5_new_km to here

2009-02-20 yusei
* Move ERP5Site_setSkinCache to erp5_forge and set http_cache as default cache manager to all image/css/js files in skin folders.

2009-02-20 yusei
* Add a utility script to associate files in skin folder to cache manager.

2009-01-14 yusei
* Fixed a wrong link to activity tool under virtual host environment.

2008/12/12 nicolas
* Add Page Template for FormBox

2008/11/13 yusei
* Start to develop version 5.4.

2008-10-29 yusei
* Classification field in the contribution tab is now translatable.

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-24 yusei
* Update xml format.

2008-09-24 fabien
* Add file fckstyles.xml to have one more style : "Python code" wich improve python code blocks displaying.
* Modify erp5_editor.css file to display this new div class in a nice way.

2008-09-15 yusei
* Add i18n mark to access tab templates.

2008-09-07 yusei
* Replace "+" with " " in translation messages.

2008-09-05 yusei
* Fixed wrong i18n:name.

2008-09-04 yusei
* Update English messages.

2008-09-03 yusei
* Fixed i18n markup in login_form.
* Remove text which is not suitable for translation.

2008-08-28 yusei
* Use Base_translateString instead of using Localizer method directly.
* Use Base_translateString or translateString instead of N_ for translation message.
* Fixed text in ERP5Site_renderContributionDialog.

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei